--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "daemonite-material": "^4.1.1",
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "jquery-bar-rating": "^1.2.2"
     }
 }
